Added a second plot

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
       <svg id="plot1" style="width:800px; height:400px;"></svg>
+      <svg id="plot2" style="width:800px; height:400px;"></svg>
     </body>
   </html>
