--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
     </p>
 
     <h2>Discussion</h2>
+    <h3>Data discussion(Dan)</h3>
+    <p>
+    To research the topic of this article more thoroughly, it would be paramount to include data from other regions (both nationally and internationally). Using temperature data from a single region is far from sufficient to make generalizations about weather changes in a meaningful way. Due to the many variables in weather changes, one region could be subject to a great decrease in temperature over several hundred years, while the global temperature was steadily increasing.
+    <p>Another interesting variable to include in the analysis would be the water temperature. Land temperatures are usually more stochastic in nature, and the data will therefore be more unreliable and contain a greater number of outliers and uncertainties. Water temperatures are more constant, and a strong increase in water temperature, is therefore a stronger indication of general weather change than land temperature alone.
+    <p>It's also important to point out that the NASA dataset only contains weather data from 1880 to 1969 from the city of Tarm which we chose as our geographical area. Looking at the
+    <a href="https://climate.nasa.gov/vital-signs/global-temperature/">Global Land-Ocean Temperature Index</a>
+    from NASA, we see that the global land and water temperatures have only increased since 1969 and the tendency have gotten stronger since then as well.
+
+
     <h3>Dynamic visualisation (Jens)</h3>
     <p>
       Our plots focus on the development of one (average) temperature over
