--- a/index.html
+++ b/index.html
@@ -51,24 +51,36 @@
       indicating that the weather changes are not just sporadic but consistent
       and long-lasting.
     </p>
+    <p>
+      Due to the effects of industrialisation and emissions of green house
+      gasses starting in the late 1900s, we expect to see that the temperature
+      will be rising over the past 100 years.
+    </p>
 
     <h2>Method</h2>
     <p>
       We have collected data through the
       <a href="https://data.giss.nasa.gov/gistemp/station_data/" title="GISS">
         Goddard Institute for Space Studies</a> who have collected data from
-        Tarm, Denmark from 1880 to 1969. The data sums the temperature for
-        each month for each period.
+        Tarm, Denmark from 1880 to 1969. The data contains the average
+        temperature for each month.
     </p>
-    <h3>Data anormalities</h3>
     <p>
-      The data had some anormalities and odd readings we filtered out. We also
-      removed missing data points completely without any attempt at
+      The data was preprocessed by fitting the format into a <code>csv</code>.
+      The data also had some anormalities and odd readings we filtered out.
+      Missing data points was completely removed without any attempt at
       interpolation.
     </p>
 
     <h2>Analysis</h2>
-
+    <p>
+      To test the assumption that the temperature is generally rising we are
+      plotting the average temperature for each year from 1880 to 1969. The
+      plot shows that the temperature in the western Jutland is on average
+      between 6 and 9 degrees celsius, and has been for the last 100 years.
+      There might be a small inclination - particularly after the 1940s - but
+      the graph does not provide any concluding evidence.
+    </p>
     <svg id="plot2" style="width:800px; height:400px;"></svg>
     <p class="caption">Figure 1: Average temperature from 1880 to 1969 in
     degrees celsius.</p>
@@ -120,6 +132,13 @@
     </p>
 
     <h2>Conclusion</h2>
+    <p>
+      Assuming that the temperature of Tarm, Denmark, would generally be
+      rising throughout the last 100 years, we visually analysed data collected
+      from the Goddard Institute for Space Studies. Our analysis showed that
+      while there seems to be a general trend toward higher temperature, the
+      data was insufficient to draw any lasting conclusions.
+    </p>
 
   </body>
 </html>
