--- a/index.html
+++ b/index.html
@@ -84,10 +84,12 @@
     <svg id="plot2" style="width:800px; height:400px;"></svg>
     <p class="caption">Figure 1: Average temperature from 1880 to 1969 in
     degrees celsius.</p>
-
+    <p>
+      Since no apparent tendencies were observed, we created a new plot using the average temperature in the summer months and winter months. While there doesn't seem to be a general increase in temperature neither in the summer or winter, the temperatures in the winter months seem to be a lot more fluctuating with more extreme temperature differences. The winter months seem to account for the larger fluctuations in the average temperature in figure 1.
     <svg id="plot3" style="width:800px; height:400px;"></svg>
     <p class="caption">Figure 2: Average temperature for summer (red) and winter (blue) from
     1880 to 1969 in degrees celsius.</p>
+
 
     <h2>Discussion</h2>
     <h3>Data discussion(Dan)</h3>
