Added histogram chart

--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
         text-indent: -5rem;
         margin-left: 10rem;
       }
+
+.bar rect {
+  fill: steelblue;
+}
+
+.bar text {
+  fill: #fff;
+  font: 10px sans-serif;
+}
     </style>
 
     <h1>How has the weather changed over the past 100 years?</h1>
